--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -241,9 +241,13 @@
             <span class="text-slate-700 dark:text-gray-400 font-bold">Información:</span>
             <span class="ml-1">Datos procesados y presentados en forma adecuada, de interés para un observador en un tiempo determinado.</span>
           </li>
-        <li class="mb-1">
+          <li class="mb-1">
             <span class="text-slate-700 dark:text-gray-400 font-bold">Conocimiento:</span>
             <span class="ml-1">Información procesada para emitir juicios que llevan a conclusiones.</span>
+          </li>
+          <li class="mb-1">
+            <span class="text-slate-700 dark:text-gray-400 font-bold">Algoritmo:</span>
+            <span class="ml-1">Secuencia de operaciones que resuelven un conjunto de problemas y que involucran el procesamiento de datos, el cálculo de operaciones matemáticas o la prediccion de resultados basados en evidencia.</span>
           </li>
           <li class="mb-1">
             <span class="text-slate-700 dark:text-gray-400 font-bold">Rendimiento:</span>
@@ -268,7 +272,7 @@
         </ol>
       </div>
       <!--imagen-->
-      <div class="flex justify-center items-center mb-4 mt-4">
+      <div class="flex justify-center items-center my-10">
         <img src="../img/ejemplo.JPG" alt="Imagen de referencia al contenido" class="rounded-md max-w-full h-auto">
       </div>
       <!--titulo proceso KDD  -->
@@ -317,6 +321,10 @@
       <div class="flex justify-center items-center my-5">
         <img src="../img/proceso-kdd.PNG" alt="Imagen de proceso KDD" class="rounded-md max-w-full h-auto">
       </div>
+      <h2 class="text-2xl my-5 leading-relaxed font-bold text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-500 to-red-400 ">algun titulo</h2>
+      <p>hay que agregar big data, datawarehouse o procesos etl?</p>
+      <p>hay que agregar reglas de inferencia rudimentaria?</p>
+      <p>arboles de decision?</p>
     </div><!--.container principal. -->
 
     <!-- Script para alternar modo oscuro -->
