--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a
               href="../Pages/comparativa.html"
               class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400"
-              >Comparativa</a
+              >Herramientas</a
             >
             <a
               href="../Pages/videos.html"
