--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -37,7 +37,7 @@
             <a
               href="/Pages/comparativa.html"
               class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400"
-              >Comparativa</a
+              >Herramientas</a
             >
             <a
               href="/Pages/videos.html"
@@ -95,7 +95,7 @@
         <a
           href="/Pages/comparativa.html"
           class="block px-4 py-2 text-gray-700 hover:bg-gray-200 dark:text-gray-300 dark:hover:bg-gray-700"
-          >Comparativa</a
+          >Herramientas</a
         >
         <a
           href="/Pages/videos.html"
