--- a/Pages/videos.html
+++ b/Pages/videos.html
@@ -96,7 +96,7 @@
         <a
           href="/Pages/comparativa.html"
           class="block px-4 py-2 text-gray-700 hover:bg-gray-200 dark:text-gray-300 dark:hover:bg-gray-700"
-          >Comparativa</a
+          >Herramientas</a
         >
         <a
           href="/Pages/videos.html"
