cambios en documenticacion y comparativa

--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -227,7 +227,7 @@
         <br />
       </p>
       <!--lista de conceptos -->
-      <div class="p-4 max-w-7xl mx-auto bg-gray-100 dark:bg-gray-800 rounded-md shadow-md">
+      <div class="p-4 max-w-7xl mx-auto bg-gray-100 dark:bg-gray-800 rounded-md shadow-xl">
         <ol class="list-disc pl-6 space-y-4 text-gray-700 dark:text-gray-300">
           <li class="mb-1">
             <span class="text-slate-700 dark:text-gray-400 font-bold">Dataset:</span>
@@ -294,7 +294,7 @@
         En lo que respecta a las fases del proceso KDD, consta de las siguientes:
       </p>
       <!--listado de proceso kdd -->
-      <div class="p-4 max-w-7xl mx-auto bg-gray-100 dark:bg-gray-800 my-5 rounded-md shadow-md">
+      <div class="p-4 max-w-7xl mx-auto bg-gray-100 dark:bg-gray-800 my-5 rounded-md shadow-xl">
         <ol class="list-decimal pl-6 space-y-4 text-gray-700 dark:text-gray-300">
           <li>
         <span class="font-bold text-slate-700 dark:text-gray-400">Selección:</span> 
