--- a/Pages/comparativa.html
+++ b/Pages/comparativa.html
@@ -109,9 +109,9 @@
     <!-- Sección Información -->
     <div class="container mx-auto px-4 py-8">
       <h1
-        class="text-3xl font-bold text-gray-800 dark:text-gray-100 mb-6 text-center md:mb-0"
+        class="text-4xl font-extrabold my-6 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%"
       >
-        Comparativa
+        Herramientas para la Minería de Datos
       </h1>
     </div>
     <!-- Script para alternar modo oscuro -->
