se agregaron herramientas

--- a/Pages/comparativa.html
+++ b/Pages/comparativa.html
@@ -113,7 +113,54 @@
       >
         Herramientas para la Minería de Datos
       </h1>
+      <div class="space-y-6">
+        <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md">
+          <h2 class="text-2xl font-bold mb-2">RapidMiner</h2>
+          <p class="text-gray-700 dark:text-gray-300 mb-4">
+            RapidMiner es una plataforma de ciencia de datos que permite la
+            preparación de datos, el aprendizaje automático y el despliegue de
+            modelos. Es fácil de usar y no requiere conocimientos avanzados de
+            programación.
+          </p>
+          <a
+            href="https://rapidminer.com/downloads/"
+            class="text-blue-600 dark:text-blue-400 hover:underline"
+            target="_blank"
+            >Descargar RapidMiner</a
+          >
+        </div>
+        <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md">
+          <h2 class="text-2xl font-bold mb-2">KNIME</h2>
+          <p class="text-gray-700 dark:text-gray-300 mb-4">
+            KNIME es una plataforma de análisis de datos que permite crear
+            flujos de trabajo visuales para la preparación de datos, el análisis
+            y la visualización. Es una herramienta de código abierto y altamente
+            extensible.
+          </p>
+          <a
+            href="https://www.knime.com/downloads"
+            class="text-blue-600 dark:text-blue-400 hover:underline"
+            target="_blank"
+            >Descargar KNIME</a
+          >
+        </div>
+        <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md">
+          <h2 class="text-2xl font-bold mb-2">Weka</h2>
+          <p class="text-gray-700 dark:text-gray-300 mb-4">
+            Weka es una colección de algoritmos de aprendizaje automático para
+            tareas de minería de datos. Es una herramienta de código abierto que
+            proporciona una interfaz gráfica de usuario para facilitar su uso.
+          </p>
+          <a
+            href="https://www.cs.waikato.ac.nz/ml/weka/downloading.html"
+            class="text-blue-600 dark:text-blue-400 hover:underline"
+            target="_blank"
+            >Descargar Weka</a
+          >
+        </div>
+      </div>
     </div>
+
     <!-- Script para alternar modo oscuro -->
     <script src="../js/app.js"></script>
   </body>
