--- a/Pages/comparativa.html
+++ b/Pages/comparativa.html
@@ -152,12 +152,108 @@
             proporciona una interfaz gráfica de usuario para facilitar su uso.
           </p>
           <a
-            href="https://www.cs.waikato.ac.nz/ml/weka/downloading.html"
+            href="https://ml.cms.waikato.ac.nz/weka"
             class="text-blue-600 dark:text-blue-400 hover:underline"
             target="_blank"
             >Descargar Weka</a
           >
         </div>
+        <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md">
+          <h2 class="text-2xl font-bold mb-2">Orange</h2>
+          <p class="text-gray-700 dark:text-gray-300 mb-4">
+            Orange es una plataforma de análisis de datos que permite la
+            creación de flujos de trabajo visuales para la preparación de datos,
+            el análisis y la visualización. Es una herramienta de código abierto
+            y altamente extensible.
+          </p>
+          <a
+            href="https://orangedatamining.com/download/"
+            class="text-blue-600 dark:text-blue-400 hover:underline"
+            target="_blank"
+            >Descargar Orange</a
+          >
+        </div>
+      </div>
+      <h1
+        class="text-4xl font-extrabold my-6 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%"
+      >
+        Comparaciones
+      </h1>
+      <div class="overflow-x-auto">
+        <table
+          class="min-w-full bg-white dark:bg-gray-800 rounded-lg shadow-md"
+        >
+          <thead>
+            <tr>
+              <th class="py-2 px-4 bg-gray-200 dark:bg-gray-700">
+                Herramienta
+              </th>
+              <th class="py-2 px-4 bg-gray-200 dark:bg-gray-700">
+                Código Abierto
+              </th>
+              <th class="py-2 px-4 bg-gray-200 dark:bg-gray-700">
+                Interfaz Gráfica
+              </th>
+              <th class="py-2 px-4 bg-gray-200 dark:bg-gray-700">
+                Enlace de Descarga
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="border px-4 py-2">RapidMiner</td>
+              <td class="border px-4 py-2">No</td>
+              <td class="border px-4 py-2">Sí</td>
+              <td class="border px-4 py-2">
+                <a
+                  href="https://rapidminer.com/downloads/"
+                  class="text-blue-600 dark:text-blue-400 hover:underline"
+                  target="_blank"
+                  >Descargar RapidMiner</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td class="border px-4 py-2">KNIME</td>
+              <td class="border px-4 py-2">Sí</td>
+              <td class="border px-4 py-2">Sí</td>
+              <td class="border px-4 py-2">
+                <a
+                  href="https://www.knime.com/downloads"
+                  class="text-blue-600 dark:text-blue-400 hover:underline"
+                  target="_blank"
+                  >Descargar KNIME</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td class="border px-4 py-2">Weka</td>
+              <td class="border px-4 py-2">Sí</td>
+              <td class="border px-4 py-2">Sí</td>
+              <td class="border px-4 py-2">
+                <a
+                  href="https://ml.cms.waikato.ac.nz/weka"
+                  class="text-blue-600 dark:text-blue-400 hover:underline"
+                  target="_blank"
+                  >Descargar Weka</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td class="border px-4 py-2">Orange</td>
+              <td class="border px-4 py-2">Sí</td>
+              <td class="border px-4 py-2">Sí</td>
+              <td class="border px-4 py-2">
+                <a
+                  href="https://orangedatamining.com/download/"
+                  class="text-blue-600 dark:text-blue-400 hover:underline"
+                  target="_blank"
+                  >Descargar Orange</a
+                >
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
 
