--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -108,13 +108,8 @@
 
     <!-- Sección Información -->
     <div class="container mx-auto px-4 py-8">
-      <h1
-        class="text-3xl font-bold text-gray-800 dark:text-gray-100 mb-6 text-center md:mb-0"
-      >
-        Documentación
-      </h1>
       <h2
-        class="text-2xl font-bold mt-5 text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-500 to-red-400"
+        class="text-4xl font-extrabold my-9 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%"
       >
         ¿Qué es la Minería de Datos?
       </h2>
@@ -216,7 +211,7 @@
       </div>
       <!--titulo conceptos basicos -->
       <h2
-        class="text-2xl mb-4 leading-relaxed font-bold mt-5 text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-500 to-red-400"
+        class="text-4xl font-extrabold my-9 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%"
       >
         Conceptos Básicos
       </h2>
@@ -276,7 +271,7 @@
         <img src="../img/ejemplo.JPG" alt="Imagen de referencia al contenido" class="rounded-md max-w-full h-auto">
       </div>
       <!--titulo proceso KDD  -->
-      <h2 class="text-2xl my-5 leading-relaxed font-bold text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-500 to-red-400">
+      <h2 class="text-4xl font-extrabold my-9 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">
         Proceso KDD
       </h2>
       <p class="text-justify text-lg leading-relaxed text-gray-700 dark:text-gray-300 mb-2">KDD o Know Discovery in Databases (Descubrimiento de Conocimiento en Bases de datos), es el 
@@ -287,7 +282,7 @@
         y generar ventajas competitivas. Al convertir datos en información útil KDD ayuda a las empresas a innovar, preever problemas o oportunidades y responder de manera más efectiva a las necesidades del mercado y de sus clientes.
       </p>
       <!--Titulo Etapas del proceso KDD -->
-      <h2 class="text-2xl my-5 leading-relaxed font-bold text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-500 to-red-400" ">
+      <h2 class="text-4xl font-extrabold my-6 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">
         Etapas del Proceso KDD
       </h2>
       <p class="text-lg text-gray-700 dark:text-gray-300">
@@ -321,7 +316,7 @@
       <div class="flex justify-center items-center my-5">
         <img src="../img/proceso-kdd.PNG" alt="Imagen de proceso KDD" class="rounded-md max-w-full h-auto">
       </div>
-      <h2 class="text-2xl my-5 leading-relaxed font-bold text-center bg-clip-text text-transparent bg-gradient-to-r from-orange-500 to-red-400 ">algun titulo</h2>
+      <h2 class="text-4xl font-extrabold my-9 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">algun titulo</h2>
       <p>hay que agregar big data, datawarehouse o procesos etl?</p>
       <p>hay que agregar reglas de inferencia rudimentaria?</p>
       <p>arboles de decision?</p>
