--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
               class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400"
               >Videos</a
             >
+            <a
+              href="../Pages/videos.html"
+              class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400"
+              >Videos</a
+            >
             <!-- Botón para alternar modo oscuro -->
             <button
               id="dark-mode-toggle"
