se agregó página de Quiz y enlaces en la navegación

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
               >Videos</a
             >
             <a
-              href="../Pages/videos.html"
-              class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400"
-              >Videos</a
+              href="../Pages/quiz.html"
+              class="text-emerald-700 hover:text-red-600"
+              >Quiz</a
             >
             <!-- Botón para alternar modo oscuro -->
             <button
@@ -107,6 +107,11 @@
           href="/Pages/videos.html"
           class="block px-4 py-2 text-gray-700 hover:bg-gray-200 dark:text-gray-300 dark:hover:bg-gray-700"
           >Videos</a
+        >
+        <a
+          href="../Pages/quiz.html"
+          class="block px-4 py-2 text-emerald-700 hover:text-red-600"
+          >Quiz</a
         >
       </div>
     </nav>
