--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -44,6 +44,11 @@
               class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400"
               >Videos</a
             >
+            <a
+              href="../Pages/quiz.html"
+              class="text-emerald-700 hover:text-red-600"
+              >Quiz</a
+            >
             <!-- Botón para alternar modo oscuro -->
             <button
               id="dark-mode-toggle"
@@ -102,6 +107,9 @@
           class="block px-4 py-2 text-gray-700 hover:bg-gray-200 dark:text-gray-300 dark:hover:bg-gray-700"
           >Videos</a
         >
+        <a href="../Pages/quiz.html" class="block px-4 py-2 text-emerald-700 hover:text-red-600">
+          Quiz
+        </a>
       </div>
     </nav>
     <!--HASTA AQUI -->
