se actualizó la sección de documentación con conceptos avanzados de minería de datos y enlaces a recursos

--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -324,10 +324,124 @@
       <div class="flex justify-center items-center my-5">
         <img src="../img/proceso-kdd.PNG" alt="Imagen de proceso KDD" class="rounded-md max-w-full h-auto">
       </div>
-      <h2 class="text-4xl font-extrabold my-9 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">algun titulo</h2>
-      <p>hay que agregar big data, datawarehouse o procesos etl?</p>
-      <p>hay que agregar reglas de inferencia rudimentaria?</p>
-      <p>arboles de decision?</p>
+      <h2 class="text-4xl font-extrabold my-9 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">Conceptos Avanzados</h2>
+      <p class="text-lg text-gray-700 dark:text-gray-300">
+        La minería de datos es un campo en constante evolución, por lo que es importante estar al tanto de los conceptos claves que es necesario conocer para poder aplicarla de manera efectiva.
+      </p>
+      <div class="p-4 max-w-7xl mx-auto bg-gray-100 dark:bg-gray-800 my-5 rounded-md shadow-xl">
+        <ol class="list-disc pl-6 space-y-4 text-gray-700 dark:text-gray-300">
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Big Data:</span> 
+            Conjunto de datos que son tan grandes y complejos que no pueden ser procesados por las herramientas tradicionales de procesamiento de datos.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Datawarehouse:</span> 
+            Almacén de datos que se utiliza para almacenar y gestionar grandes volúmenes de datos.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">ETL:</span> 
+            Proceso que consiste en extraer, transformar y cargar datos desde múltiples fuentes de datos a un almacén de datos.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Reglas de clasificación:</span> 
+            Nos permiten asignar categorías o clases a nuevas instancias en base a un conjunto de datos de entrenamiento.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Árboles de decisión:</span> 
+            Modelo predictivo de clasificación o regresión que se utiliza para representar y predecir resultados basados en una serie de condiciones.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Clasificación</span> 
+            Es una técnica de minería de datos que se utiliza para organizar los datos en categorías o clases.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Regresión:</span> 
+            Técnica de minería de datos que se utiliza para predecir valores numéricos.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Regresión Lineal:</span>
+            Es uno de los métodos mas utilizados en la predicción de valores numéricos. El objetivo es encontrar un linea recta que mejor se ajuste a los datos.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Regresión Logistica:</span> 
+            Es un método de regresión que se utiliza para predecir la probabilidad de que un evento ocurra.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Naive Bayes:</span> 
+            Algoritmo de clasificación que se basa en el teorema de Bayes para predecir la probabilidad de que una instancia pertenezca a una clase determinada.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Redes Neuronales:</span> 
+            Modelo de aprendizaje profundo que se inspira en el funcionamiento del cerebro humano.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Algoritmos supervisados:</span> 
+            Algoritmos que usan datos etiquetados para entrenar un modelo y predecir resultados.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Algoritmos no supervisados:</span> 
+            Algoritmos que no requieren datos etiquetados para entrenar un modelo y predecir resultados.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Validación cruzada:</span> 
+            Tecnica para evaluar un modelo dividiendo los datos en conjuntos de entrenamiento y prueba.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Sobreajuste(Overfitting):</span> 
+            Fenómeno que ocurre cuando un modelo se ajusta demasiado a los datos de entrenamiento y no generaliza bien a nuevos datos.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Underfitting:</span> 
+            Fenómeno que ocurre cuando un modelo es demasiado simple para capturar la complejidad de los datos.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Outliers:</span> 
+            Valores atípicos que se encuentran en un conjunto de datos y que pueden afectar negativamente el rendimiento de un modelo.
+          </li>
+          <li>
+            <span class="font-bold text-slate-700 dark:text-gray-400">Clustering:</span> 
+            Técnica de minería de datos que se utiliza para agrupar datos similares en grupos o clusters.
+          </li>
+        </ol>
+      </div>
+      <h2 class="text-4xl font-extrabold my-6 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">Enlace a Recursos/Datasets</h2>
+      <p class="text-lg text-gray-700 dark:text-gray-300">
+        Si deseas profundizar en el tema de la minería de datos, te recomendamos visitar los siguientes enlaces:
+      </p>
+      <table class="min-w-full bg-white dark:bg-gray-800 my-7">
+        <thead>
+          <tr>
+            <th class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Recurso</th>
+            <th class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Descripción</th>
+            <th class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Enlace</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Kaggle</td>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Plataforma de competencia de datos y repositorio de datasets.</td>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700"><a href="https://www.kaggle.com" class="text-blue-500 hover:underline">Visitar Kaggle</a></td>
+          </tr>
+          <tr>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Google Dataset Search</td>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Motor de búsqueda para encontrar datasets en la web.</td>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700"><a href="https://datasetsearch.research.google.com" class="text-blue-500 hover:underline">Visitar Google Dataset Search</a></td>
+          </tr>
+          <tr>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Datos.gob</td>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Portal de datos abiertos del gobierno de Chile.</td>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700"><a href="https://datos.gob.cl" class="text-blue-500 hover:underline">Visitar Datos.gob</a></td>
+          </tr>
+        </tbody>
+      </table>
+      <p class="text-lg text-gray-700 dark:text-gray-300 my-5">Herramientas para que puedas utilizar los datasets que descarges en una de las paginas nombradas anteriormente
+        <a href="comparativa.html" class="text-blue-500 hover:underline">Click Aquí</a>
+      </p>
+      <p class="text-lg text-gray-700 dark:text-gray-300">
+        Si deseas aplicar tus conocimientos en minería de datos, te recomendamos visitar nuestra sección de videos donde encontrarás tutoriales y ejemplos prácticos.
+        <a href="videos.html" class="text-blue-500 hover:underline">Click aquí</a>
+      </p>
+      
     </div><!--.container principal. -->
 
     <!-- Script para alternar modo oscuro -->
