--- a/index.html
+++ b/index.html
@@ -117,16 +117,38 @@
     </nav>
     <!--HASTA AQUI -->
     <!-- Sección Información -->
-    <div class="container mx-auto px-4 py-8">
-      <h1
-        class="text-3xl font-bold text-gray-800 dark:text-gray-100 mb-6 text-center md:mb-0"
-      >
-        Bienvenido a la plataforma Educativa DataMining.
-      </h1>
-      <p class="text-gray-500 dark:text-gray-400 text-center mt-1">
-        Aprenderás conceptos claves, herramientas y obtendrás acceso a recursos
-        como apoyo.
-      </p>
+    <div
+      class="container mx-auto px-4 py-8 flex flex-col md:flex-row items-center"
+    >
+      <div class="md:w-1/2">
+        <h1
+          class="text-3xl font-bold text-gray-800 dark:text-gray-100 mb-6 text-center md:text-left"
+        >
+          Bienvenido a la plataforma Educativa DataMining.
+        </h1>
+        <p
+          class="text-gray-500 dark:text-gray-400 text-center md:text-left mt-1"
+        >
+          En esta plataforma, aprenderás conceptos claves, herramientas y
+          obtendrás acceso a recursos como apoyo. Exploraremos conceptos basicos
+          y avanzados de minería de datos, tendras acceso a un quiz para evaluar
+          tus conocimientos y mucho mas.
+        </p>
+        <div class="mt-8 flex justify-center md:justify-start">
+          <a
+            href="/Pages/documentacion.html"
+            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+            >Ver mas</a
+          >
+        </div>
+      </div>
+      <div class="md:w-1/2 flex justify-center md:justify-end mt-6 md:mt-0">
+        <img
+          src="img/1698380306062.jpeg"
+          alt="Imagen representativa de DataMining"
+          class="rounded-md max-w-full h-auto"
+        />
+      </div>
     </div>
     <!-- Script para alternar modo oscuro -->
     <script src="js/app.js"></script>
