se agregó la página de Gráfico Interactivo y enlaces en la navegación

--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -49,6 +49,12 @@
               class="text-emerald-700 hover:text-red-600"
               >Quiz</a
             >
+            <a
+              href="/Pages/grafico.html"
+              class="text-blue-700 hover:text-red-600"
+            >
+              Gráfico Interactivo
+            </a>
             <!-- Botón para alternar modo oscuro -->
             <button
               id="dark-mode-toggle"
@@ -110,6 +116,11 @@
         <a href="../Pages/quiz.html" class="block px-4 py-2 text-emerald-700 hover:text-red-600">
           Quiz
         </a>
+        <a
+          href="../Pages/quiz.html"
+          class="block px-4 py-2 text-blue-700 hover:text-red-600"
+          >Gráfico Interactivo</a
+        >
       </div>
     </nav>
     <!--HASTA AQUI -->
