--- a/Pages/grafico.html
+++ b/Pages/grafico.html
@@ -9,12 +9,126 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body
-    class="bg-gray-100 flex flex-col items-center justify-center min-h-screen"
-  >
+  <!--class="bg-gray-100 flex flex-col items-center justify-center min-h-screen" -->
+  <body class="bg-gray-100 dark:bg-gray-900 dark:text-gray-100">
+    <nav class="bg-white dark:bg-gray-800 shadow-md">
+      <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between items-center h-16">
+          <!-- Título logo -->
+          <a
+            href="/"
+            class="text-3xl font-bold font-mono bg-clip-text text-transparent bg-gradient-to-r from-cyan-500 to-blue-700"
+            >DataMining</a
+          >
+          <!-- Navegación -->
+          <div class="hidden md:flex space-x-7 items-center">
+            <a
+              href="/"
+              class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400"
+              >Inicio</a
+            >
+            <a
+              href="../Pages/documentacion.html"
+              class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400"
+              >Documentación</a
+            >
+            <a
+              href="../Pages/comparativa.html"
+              class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400"
+              >Herramientas</a
+            >
+            <a
+              href="../Pages/videos.html"
+              class="text-gray-700 hover:text-blue-600 dark:text-gray-300 dark:hover:text-blue-400"
+              >Videos</a
+            >
+            <a
+              href="../Pages/quiz.html"
+              class="text-emerald-700 hover:text-red-600"
+              >Quiz</a
+            >
+            <a
+              href="/Pages/grafico.html"
+              class="text-blue-700 hover:text-red-600"
+            >
+              Gráfico Interactivo
+            </a>
+            <!-- Botón para alternar modo oscuro -->
+            <button
+              id="dark-mode-toggle"
+              class="ml-4 w-10 h-10 flex items-center justify-center rounded-full bg-gray-200 dark:bg-gray-700 shadow-lg hover:scale-110 transition-all duration-300 focus:outline-none"
+            >
+              <span
+                id="dark-mode-icon"
+                class="text-gray-700 dark:text-gray-300 text-lg"
+                >🌙</span
+              >
+            </button>
+          </div>
+          <!-- Botón menú móvil -->
+          <div class="md:hidden">
+            <button
+              id="menu-button"
+              class="text-gray-800 dark:text-gray-300 focus:outline-none"
+            >
+              <svg
+                class="w-6 h-6"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M4 6h16M4 12h16m-7 6h7"
+                ></path>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- Menú desplegable móvil -->
+      <div id="mobile-menu" class="md:hidden hidden dark:bg-gray-800">
+        <a
+          href="/"
+          class="block px-4 py-2 text-gray-700 hover:bg-gray-200 dark:text-gray-300 dark:hover:bg-gray-700"
+          >Inicio</a
+        >
+        <a
+          href="/Pages/documentacion.html"
+          class="block px-4 py-2 text-gray-700 hover:bg-gray-200 dark:text-gray-300 dark:hover:bg-gray-700"
+          >Documentación</a
+        >
+        <a
+          href="/Pages/comparativa.html"
+          class="block px-4 py-2 text-gray-700 hover:bg-gray-200 dark:text-gray-300 dark:hover:bg-gray-700"
+          >Herramientas</a
+        >
+        <a
+          href="/Pages/videos.html"
+          class="block px-4 py-2 text-gray-700 hover:bg-gray-200 dark:text-gray-300 dark:hover:bg-gray-700"
+          >Videos</a
+        >
+        <a
+          href="../Pages/quiz.html"
+          class="block px-4 py-2 text-emerald-700 hover:text-red-600"
+          >Quiz</a
+        >
+        <a
+          href="../Pages/quiz.html"
+          class="block px-4 py-2 text-blue-700 hover:text-red-600"
+          >Gráfico Interactivo</a
+        >
+      </div>
+    </nav>
     <div class="container mx-auto p-4">
-      <h1 class="text-2xl font-bold mb-4">Gráficos Interactivos</h1>
+      <h1 class="text-2xl font-bold mb-4">
+        Gráficos Interactivos con Chart.js
+      </h1>
       <div class="flex flex-col space-y-4">
         <div class="bg-white p-4 rounded shadow">
           <canvas id="barChart"></canvas>
@@ -45,6 +159,7 @@
         </div>
       </div>
     </div>
+    <script src="../js/app.js"></script>
     <script src="../js/script.js"></script>
   </body>
 </html>
