--- a/Pages/videos.html
+++ b/Pages/videos.html
@@ -134,6 +134,60 @@
       >
         Videos
       </h1>
+      <div class="container mx-auto px-4 py-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+          <!-- Video 1 -->
+          <div class="video-item">
+            <iframe
+              width="100%"
+              height="315"
+              src="https://www.youtube.com/embed/aUPRixo1jFw?si=lImr8j7WkaU80CBf"
+              title="Clustering"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+            <p class="mt-2 text-center">
+              Explicación grafica de lo que el Clustering
+            </p>
+          </div>
+          <!-- Video 2 -->
+          <div class="video-item">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/lAMpEI9Xrro?si=RskLMSBQD2Ywlytk"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+            <p class="mt-2 text-center">
+              En este video podras ver una aplicación pratica de la regresión
+              logistica en el Software de Orange
+            </p>
+          </div>
+          <!-- Video 3 -->
+          <div class="video-item">
+            <iframe
+              width="100%"
+              height="315"
+              src="https://www.youtube.com/embed/QkRfyq9hADQ?si=dwoYeL0FWhbpZTBx"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+            <p class="mt-2 text-center">
+              En este video se explica de forma mas detallada que es un Arbol de
+              desición y un ejemplo practico aplicado en el Software de Orange.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- Script para alternar modo oscuro -->
     <script src="../js/app.js"></script>
