--- a/Pages/documentacion.html
+++ b/Pages/documentacion.html
@@ -335,10 +335,12 @@
       <div class="flex justify-center items-center my-5">
         <img src="../img/proceso-kdd.PNG" alt="Imagen de proceso KDD" class="rounded-md max-w-full h-auto">
       </div>
+      <!--conceptos avanzados -->
       <h2 class="text-4xl font-extrabold my-9 text-center bg-clip-text text-transparent bg-gradient-to-r from-indigo-500 from-10% via-sky-500 via-30% to-emerald-500 to-90%">Conceptos Avanzados</h2>
       <p class="text-lg text-gray-700 dark:text-gray-300">
         La minería de datos es un campo en constante evolución, por lo que es importante estar al tanto de los conceptos claves que es necesario conocer para poder aplicarla de manera efectiva.
       </p>
+      <!--lista de conceptos avanzados -->
       <div class="p-4 max-w-7xl mx-auto bg-gray-100 dark:bg-gray-800 my-5 rounded-md shadow-xl">
         <ol class="list-disc pl-6 space-y-4 text-gray-700 dark:text-gray-300">
           <li>
@@ -419,10 +421,11 @@
       <p class="text-lg text-gray-700 dark:text-gray-300">
         Si deseas profundizar en el tema de la minería de datos, te recomendamos visitar los siguientes enlaces:
       </p>
+      <!--tabla dataset -->
       <table class="min-w-full bg-white dark:bg-gray-800 my-7">
         <thead>
           <tr>
-            <th class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Recurso</th>
+            <th class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Datasets</th>
             <th class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Descripción</th>
             <th class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Enlace</th>
           </tr>
@@ -442,6 +445,28 @@
             <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Datos.gob</td>
             <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Portal de datos abiertos del gobierno de Chile.</td>
             <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700"><a href="https://datos.gob.cl" class="text-blue-500 hover:underline">Visitar Datos.gob</a></td>
+          </tr>
+        </tbody>
+      </table>
+      <!--tabla pagina -->
+      <table class="min-w-full bg-white dark:bg-gray-800 my-7">
+        <thead>
+          <tr>
+            <th class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Paginas</th>
+            <th class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Descripción</th>
+            <th class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Enlace</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">IBM</td>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Articulo de IBM donde podras complementar la teoría sobre minería de datos</td>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700"><a href="https://www.ibm.com/es-es/topics/data-mining" class="text-blue-500 hover:underline">Visitar</a></td>
+          </tr>
+          <tr>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Wikipedia</td>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700">Información de minería de datos de una fuente confiable como wikipedia</td>
+            <td class="py-2 px-4 border-b border-gray-200 dark:border-gray-700"><a href="https://es.wikipedia.org/wiki/Miner%C3%ADa_de_datos" class="text-blue-500 hover:underline">Visitar</a></td>
           </tr>
         </tbody>
       </table>
